AS-2004-06-03-1  Cleanup:   changed message when "qmod -X" mod is not done
                            because queue already has the specified state.

AS-2004-06-03-0: Bugfix:    formatting, typos of various text files

DT-2004-06-03-4: Bugfix:    o Fixed check-in problem with DT-2004-06-03-3
                 Changed:   DRMAA

DT-2004-06-03-3: Bugfix:    o Fixed various bugs in DRMAA Java binding
                 Changed:   DRMAA

JG-2004-06-03-0: Testsuite: Improved tests functional/access_lists.
                            Cleanup.

MD-2004-06-02-1: Bugfix:    - added comment to autoinst template
                 Changed:   inst_template.conf

DT-2004-06-02-2: Bugfix:    o Fixed DRMAASession.wait() in DRMAA Java binding
                            o Switched Java binding to use libjdrmaa.so
                 Changed:   classes
                 Issue:     1079

MD-2004-06-02-0: Bugfix:    - changed message in scheduler settings.
                 Changed:   inst_sge

DT-2004-06-02-1: Bugfix:    o qconf no longer presents a default project when
                              editing projects
                 Cleanup:   o Created separate Makefile for DRMAA Java binding
                 Changed:   DRMAA, flatfile spooling, aimk, distinst
                 Issue:     1077

JG-2004-06-02-0: Bugfix:    QU_full_name of queue instances was not set after a
                            qmaster restart.
                 Review:    AD

DT-2004-06-02-0: Cleanup:   o Updated DRMAA Java binding JavaDocs
                 Changed:   DRMAA

AD-2004-06-01-0: Bugfix:    Did add workaround for non POSIX compliant
                            behaviour of LinuxThreads regarding propagation
                            of UID/EUID to new threads.
                 Changed:   qmaster

MD-2004-06-01-1: Bugfix:    - permission problem, rc-scripts creation
                 Changed:   inst_sge, inst_berkeley.sh

DT-2004-06-01-3: Bugfix:    o Fixing DT-2004-06-01-2
                 Changed:   qsub