@@ -1,3 +1,7 @@
+MD-2004-06-03-0: Bugfix:    typos, some messages, cleanup
+                 Changed:   inst_sge, setfileperm.sh
+                 Review:    AS
+           
 AS-2004-06-03-1  Cleanup:   changed message when "qmod -X" mod is not done
                             because queue already has the specified state.
 
